project(TKCDF)

if (WIN32)
  list( APPEND TKCDF_PRECOMPILED_DEFS "-D__CDM_DLL" )
  list( APPEND TKCDF_PRECOMPILED_DEFS "-D__PCDM_DLL" )
  list( APPEND TKCDF_PRECOMPILED_DEFS "-D__CDF_DLL" )
  list( APPEND TKCDF_PRECOMPILED_DEFS "-D__UTL_DLL" )
  list( APPEND TKCDF_PRECOMPILED_DEFS "-D__LDOM_DLL" )
  string( REGEX REPLACE ";" " " TKCDF_PRECOMPILED_DEFS "${TKCDF_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKCDF_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/CDM")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/CDM" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/CDM")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/CDM" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/PCDM")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/PCDM" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/PCDM")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/PCDM" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/CDF")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/CDF" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/CDF")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/CDF" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/UTL")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/UTL" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/UTL")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/UTL" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/LDOM")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/LDOM" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/LDOM")
      list( APPEND TKCDF_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/LDOM" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/CDM")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/CDM" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/CDM")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/CDM" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/PCDM")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/PCDM" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/PCDM")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/PCDM" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/CDF")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/CDF" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/CDF")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/CDF" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/UTL")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/UTL" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/UTL")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/UTL" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/LDOM")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/LDOM" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/LDOM")
    list( APPEND TKCDF_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/LDOM" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKCDF_USED_LIBS TKernel )

if (WIN32)
elseif(APPLE)
elseif(ANDROID)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapIteratorOfMetaDataLookUpTable_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapIteratorOfMetaDataLookUpTable_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapIteratorOfMetaDataLookUpTable_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapIteratorOfMetaDataLookUpTable_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapIteratorOfMetaDataLookUpTable_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapIteratorOfMetaDataLookUpTable_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapIteratorOfPresentationDirectory_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapIteratorOfPresentationDirectory_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapIteratorOfPresentationDirectory_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapIteratorOfPresentationDirectory_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapIteratorOfPresentationDirectory_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapIteratorOfPresentationDirectory_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapNodeOfMetaDataLookUpTable_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapNodeOfMetaDataLookUpTable_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapNodeOfMetaDataLookUpTable_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapNodeOfMetaDataLookUpTable_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapNodeOfMetaDataLookUpTable_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapNodeOfMetaDataLookUpTable_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapNodeOfPresentationDirectory_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapNodeOfPresentationDirectory_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DataMapNodeOfPresentationDirectory_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapNodeOfPresentationDirectory_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapNodeOfPresentationDirectory_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DataMapNodeOfPresentationDirectory_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_DocumentHasher_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DocumentHasher_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_DocumentHasher_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DocumentHasher_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DocumentHasher_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_DocumentHasher_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListIteratorOfListOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListIteratorOfListOfDocument_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListIteratorOfListOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListIteratorOfListOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListIteratorOfListOfDocument_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListIteratorOfListOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListIteratorOfListOfReferences_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListIteratorOfListOfReferences_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListIteratorOfListOfReferences_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListIteratorOfListOfReferences_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListIteratorOfListOfReferences_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListIteratorOfListOfReferences_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListNodeOfListOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListNodeOfListOfDocument_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListNodeOfListOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListNodeOfListOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListNodeOfListOfDocument_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListNodeOfListOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListNodeOfListOfReferences_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListNodeOfListOfReferences_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListNodeOfListOfReferences_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListNodeOfListOfReferences_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListNodeOfListOfReferences_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListNodeOfListOfReferences_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListOfDocument_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListOfDocument_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListOfReferences_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListOfReferences_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_ListOfReferences_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListOfReferences_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListOfReferences_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_ListOfReferences_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_MapIteratorOfMapOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_MapIteratorOfMapOfDocument_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_MapIteratorOfMapOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MapIteratorOfMapOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MapIteratorOfMapOfDocument_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MapIteratorOfMapOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_MapOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_MapOfDocument_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_MapOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MapOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MapOfDocument_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MapOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_MetaDataLookUpTable_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_MetaDataLookUpTable_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_MetaDataLookUpTable_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MetaDataLookUpTable_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MetaDataLookUpTable_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_MetaDataLookUpTable_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_PresentationDirectory_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_PresentationDirectory_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_PresentationDirectory_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_PresentationDirectory_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_PresentationDirectory_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_PresentationDirectory_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDM/CDM_StdMapNodeOfMapOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_StdMapNodeOfMapOfDocument_0.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//drv/CDM/CDM_StdMapNodeOfMapOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_StdMapNodeOfMapOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_StdMapNodeOfMapOfDocument_0.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//drv/CDM/CDM_StdMapNodeOfMapOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_Application.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_Application.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_Application.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Application.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Application.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Application.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_COutMessageDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_COutMessageDriver.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_COutMessageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_COutMessageDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_COutMessageDriver.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_COutMessageDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_Document.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_Document.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_Document.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Document.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Document.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Document.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_MessageDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_MessageDriver.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_MessageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_MessageDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_MessageDriver.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_MessageDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_MetaData.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_MetaData.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_MetaData.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_MetaData.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_MetaData.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_MetaData.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_NullMessageDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_NullMessageDriver.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_NullMessageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_NullMessageDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_NullMessageDriver.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_NullMessageDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_Reference.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_Reference.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_Reference.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Reference.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Reference.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_Reference.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDM/CDM_ReferenceIterator.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDM/CDM_ReferenceIterator.cxx" )
    SOURCE_GROUP (CDM FILES "${BUILD_PATCH_DIR}//src/CDM/CDM_ReferenceIterator.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDM/CDM_ReferenceIterator.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_ReferenceIterator.cxx" )
      SOURCE_GROUP (CDM FILES "${CMAKE_SOURCE_DIR}//src/CDM/CDM_ReferenceIterator.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_DriverError_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_DriverError_0.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_DriverError_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_DriverError_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_DriverError_0.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_DriverError_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfDocument_0.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfDocument_0.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfReference_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfReference_0.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfReference_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfReference_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfReference_0.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceNodeOfSequenceOfReference_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceOfDocument_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceOfDocument_0.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceOfDocument_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceOfDocument_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceOfDocument_0.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceOfDocument_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceOfReference_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceOfReference_0.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//drv/PCDM/PCDM_SequenceOfReference_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceOfReference_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceOfReference_0.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//drv/PCDM/PCDM_SequenceOfReference_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_DOMHeaderParser.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_DOMHeaderParser.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_DOMHeaderParser.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_DOMHeaderParser.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_DOMHeaderParser.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_DOMHeaderParser.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Document.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Document.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Document.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Document.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Document.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Document.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReadWriter.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReadWriter.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReadWriter.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReadWriter.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReadWriter.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReadWriter.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReadWriter_1.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReadWriter_1.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReadWriter_1.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReadWriter_1.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReadWriter_1.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReadWriter_1.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Reader.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Reader.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Reader.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Reader.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Reader.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Reader.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Reference.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Reference.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Reference.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Reference.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Reference.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Reference.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReferenceIterator.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReferenceIterator.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_ReferenceIterator.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReferenceIterator.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReferenceIterator.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_ReferenceIterator.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_RetrievalDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_RetrievalDriver.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_RetrievalDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_RetrievalDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_RetrievalDriver.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_RetrievalDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_StorageDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_StorageDriver.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_StorageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_StorageDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_StorageDriver.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_StorageDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Writer.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Writer.cxx" )
    SOURCE_GROUP (PCDM FILES "${BUILD_PATCH_DIR}//src/PCDM/PCDM_Writer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Writer.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Writer.cxx" )
      SOURCE_GROUP (PCDM FILES "${CMAKE_SOURCE_DIR}//src/PCDM/PCDM_Writer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/CDF/CDF_MetaDataDriverError_0.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/CDF/CDF_MetaDataDriverError_0.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//drv/CDF/CDF_MetaDataDriverError_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/CDF/CDF_MetaDataDriverError_0.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/CDF/CDF_MetaDataDriverError_0.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//drv/CDF/CDF_MetaDataDriverError_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_Application.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Application.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Application.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Application.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Application.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Application.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_Directory.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Directory.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Directory.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Directory.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Directory.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Directory.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_DirectoryIterator.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_DirectoryIterator.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_DirectoryIterator.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_DirectoryIterator.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_DirectoryIterator.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_DirectoryIterator.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_FWOSDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_FWOSDriver.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_FWOSDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_FWOSDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_FWOSDriver.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_FWOSDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_MetaDataDriver.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_MetaDataDriver.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_MetaDataDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_MetaDataDriver.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_MetaDataDriver.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_MetaDataDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_MetaDataDriverFactory.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_MetaDataDriverFactory.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_MetaDataDriverFactory.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_MetaDataDriverFactory.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_MetaDataDriverFactory.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_MetaDataDriverFactory.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_Session.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Session.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Session.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Session.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Session.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Session.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_Store.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Store.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Store.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Store.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Store.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Store.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_StoreList.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_StoreList.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_StoreList.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_StoreList.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_StoreList.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_StoreList.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/CDF/CDF_Timer.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Timer.cxx" )
    SOURCE_GROUP (CDF FILES "${BUILD_PATCH_DIR}//src/CDF/CDF_Timer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Timer.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Timer.cxx" )
      SOURCE_GROUP (CDF FILES "${CMAKE_SOURCE_DIR}//src/CDF/CDF_Timer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/UTL/UTL.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/UTL/UTL.cxx" )
    SOURCE_GROUP (UTL FILES "${BUILD_PATCH_DIR}//src/UTL/UTL.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/UTL/UTL.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/UTL/UTL.cxx" )
      SOURCE_GROUP (UTL FILES "${CMAKE_SOURCE_DIR}//src/UTL/UTL.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOMBasicString.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOMBasicString.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOMBasicString.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMBasicString.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMBasicString.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMBasicString.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOMParser.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOMParser.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOMParser.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMParser.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMParser.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMParser.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOMString.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOMString.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOMString.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMString.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMString.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOMString.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Attr.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Attr.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Attr.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Attr.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Attr.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Attr.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicAttribute.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicAttribute.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicAttribute.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicAttribute.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicAttribute.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicAttribute.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicElement.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicElement.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicElement.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicElement.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicElement.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicElement.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicNode.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicNode.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicNode.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicNode.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicNode.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicNode.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicText.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicText.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_BasicText.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicText.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicText.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_BasicText.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_CharReference.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_CharReference.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_CharReference.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_CharReference.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_CharReference.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_CharReference.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_CharacterData.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_CharacterData.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_CharacterData.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_CharacterData.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_CharacterData.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_CharacterData.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Document.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Document.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Document.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Document.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Document.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Document.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Element.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Element.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Element.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Element.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Element.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Element.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_LDOMImplementation.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_LDOMImplementation.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_LDOMImplementation.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_LDOMImplementation.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_LDOMImplementation.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_LDOMImplementation.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_MemManager.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_MemManager.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_MemManager.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_MemManager.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_MemManager.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_MemManager.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Node.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Node.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_Node.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Node.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Node.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_Node.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_NodeList.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_NodeList.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_NodeList.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_NodeList.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_NodeList.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_NodeList.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_OSStream.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_OSStream.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_OSStream.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_OSStream.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_OSStream.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_OSStream.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_XmlReader.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_XmlReader.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_XmlReader.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_XmlReader.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_XmlReader.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_XmlReader.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LDOM/LDOM_XmlWriter.cxx")
    list( APPEND TKCDF_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_XmlWriter.cxx" )
    SOURCE_GROUP (LDOM FILES "${BUILD_PATCH_DIR}//src/LDOM/LDOM_XmlWriter.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_XmlWriter.cxx")
      list( APPEND TKCDF_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_XmlWriter.cxx" )
      SOURCE_GROUP (LDOM FILES "${CMAKE_SOURCE_DIR}//src/LDOM/LDOM_XmlWriter.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKCDF)
 add_library( TKCDF SHARED ${TKCDF_USED_SRCFILES} )

 set_property(TARGET TKCDF PROPERTY FOLDER ApplicationFramework)

 install( TARGETS TKCDF
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bind/Debug/TKCDF.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}")
 endif()


 set_target_properties( TKCDF PROPERTIES COMPILE_FLAGS "${TKCDF_PRECOMPILED_DEFS}" )
 include_directories( ${TKCDF_COMPILER_DIRECTORIES} )
 target_link_libraries( TKCDF ${TKCDF_USED_LIBS} )
endif()
